app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: training-service
spec:
  selector:
    app: training
  ports:
  - port: 3000
    protocol: TCP
  type: NodePort
