app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: risingstack.training.kubernetes.com
    http:
      paths:
      - path: /
        backend:
          serviceName: training-service-cluster
          servicePort: 3000
